# fnewsteer

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  api.py  docker-compose.yaml  ff_calendar.py  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml  keepalive.yml
app/: __init__.py  app.py  models.py
app/core/: __init__.py  config.py
app/services/: calendar.py  checker.py  parser.py
data/: ff_calendar_thisweek.json
docs/: CLAUDE-INSTALL.md  DOCKER-GUIDE.md  NEWS-EVENTS-TAXONOMY.md  PROMPT-EXAMPLES.md
learn-httpx/: client_example.py  httpx_quickstart.py  speed-comparison1.py  speed-comparison2.py  test_fastapi.py  test_flask.py
